[tool.poetry]
name = "gen"
version = "0.1.0"
description = ""
authors = ["Johan Schuijt <johan.schuijt@ftm.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
